--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/logoChico.ico" type="image/x-icon">
     <title>Entre páginas | Cajas literarias</title>
 </head>
 
@@ -22,7 +22,7 @@
         <!-- barra de navegación y logo del sitio -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html"><img id="logo" src="./assets/images/logo.png" alt="logo del sitio"></a>
+                <a class="navbar-brand" href="./index.html"><img id="logo" src="./assets/images/logo.webp" alt="logo del sitio"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -53,7 +53,7 @@
     <section id="bienvenida">
         <h1>¡TE DAMOS LA BIENVENIDA A ENTRE PÁGINAS!</h1>
             <article class="imagenTexto">
-                <img id="chicaLeyendo" src="./assets/images/chicaLeyendo.jpg" alt="imagen de una chica sentada en un sillón leyendo un libro">
+                <img id="chicaLeyendo" src="./assets/images/chicaLeyendo.webp" alt="imagen de una chica sentada en un sillón leyendo un libro">
                 <p class="frase">"Un lector vive mil vidas antes de morir.<br> El que nunca lee solo vive una"<br> George R. R. Martin</p>
             </article>
     </section>
@@ -74,7 +74,7 @@
     <!-- video de ejemplo de caja literaria -->
     <aside class="unboxing">
             <h2>Nuestras cajas</h2>
-            <video class="video" src="./assets/videos/videoCaja.mp4" autoplay loop controls></video>
+            <video class="video" src="./assets/videos/videoCaja.webm" autoplay loop controls></video>
     </aside>
     
     <!-- footer -->
