--- a/pages/cajas.html
+++ b/pages/cajas.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../assets/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/logoChico.ico" type="image/x-icon">
     <title>Nuestas cajas | Entre páginas</title>
 </head>
 
@@ -21,7 +21,7 @@
         <!-- barra de navegación y logo del sitio -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img id="logo" src="../assets/images/logo.png" alt="logo del sitio"></a>
+                <a class="navbar-brand" href="../index.html"><img id="logo" src="../assets/images/logo.webp" alt="logo del sitio"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -54,28 +54,28 @@
         <article class="container-fluid">
             <div class="row">
                 <div class="card col-12 col-md-6 col-lg-3">
-                    <img src="../assets/images/romance.jpg" class="card-img-top" alt="imagen de una caja literaria abierta con libro de romance y regalos varios">
+                    <img src="../assets/images/romance.webp" class="card-img-top" alt="imagen de una caja literaria abierta con libro de romance y regalos varios">
                     <div class="card-body">
                         <h5 class="card-title">Caja Romance</h5>
                         <p class="card-text">¿Te encantan las historias de amor? Si te conmueves hasta las lágrimas con autoras como Jane Austen, o te enloquecen las comedias románticas de autoras como Ali Hazelwood. La caja romance es para ti.</p>
                     </div>
                 </div>
                 <div class="card col-12 col-md-6 col-lg-3">
-                    <img src="../assets/images/misterio.jpg" class="card-img-top" alt="imagen de una caja literaria abierta con libro de misterio y regalos varios">
+                    <img src="../assets/images/misterio.webp" class="card-img-top" alt="imagen de una caja literaria abierta con libro de misterio y regalos varios">
                     <div class="card-body">
                         <h5 class="card-title">Caja Misterio</h5>
                         <p class="card-text">¿Te atraen las historias de intriga, suspenso o incluso terror? ¿Disfrutas las historias de Stephen King o Agatha Christie? Entonces la caja misterio es perfecta para ti. Está pensada para amantes del terror, de la novela negra y/o de las típicas historias de detectives.</p>
                     </div>
                 </div>
                 <div class="card col-12 col-md-6 col-lg-3">
-                    <img src="../assets/images/fantasía.jpg" class="card-img-top" alt="imagen de una caja literaria abierta con libro de fantasía y regalos varios">
+                    <img src="../assets/images/fantasía.webp" class="card-img-top" alt="imagen de una caja literaria abierta con libro de fantasía y regalos varios">
                     <div class="card-body">
                         <h5 class="card-title">Caja Fantasía</h5>
                         <p class="card-text">La caja fantasía es ideal para aquellos lectores que disfrutan conocer nuevos mundos, así como sumergirse en historias rodeadas de magia y de grandes aventuras. Aquí podrás encontrarte autores como Brandon Sanderson y Leigh Bardugo.</p>
                     </div>
                 </div>
                 <div class="card col-12 col-md-6 col-lg-3">
-                    <img src="../assets/images/sorpresa.jpg" class="card-img-top" alt="imagen de una caja literaria cerrada">
+                    <img src="../assets/images/sorpresa.webp" class="card-img-top" alt="imagen de una caja literaria cerrada">
                     <div class="card-body">
                         <h5 class="card-title">Caja sorpresa</h5>
                         <p class="card-text">Si todas nuestras cajas te gustan y no logras decidirte, ¡no te preocuoes!. Nosotros lo hacemos por ti. Nos tomamos el atrevimiento (con tu permiso, claro) de elegir una de las tres novedades del mes y te la enviamos sin decirte cuál seleccionamos. Esta opción es solo para valientes.</p>
