--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../assets/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/logoChico.ico" type="image/x-icon">
     <title>Contactos | Entre páginas</title>
 </head>
 
@@ -21,7 +21,7 @@
         <!-- barra de navegación y logo del sitio -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img id="logo" src="../assets/images/logo.png" alt="logo del sitio"></a>
+                <a class="navbar-brand" href="../index.html"><img id="logo" src="../assets/images/logo.webp" alt="logo del sitio"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -75,11 +75,11 @@
     <aside id="metodosContacto">
         <h3>También podes encontrarnos en</h3>
         <ul class="redes">
-            <li><a href="https://www.whatsapp.com/?lang=es_LA" target="_blanck"><img class="logoRedes" src="../assets/images/whatsapp.png" alt="logo whatsapp"></a></li>
-            <li><a href="https://www.gmail.com/mail/help/intl/es/about.html?iframe" target="_blanck"><img class="logoRedes" src="../assets/images/correo.png" alt="logo correo electrónico"></a></li>
-            <li><a href="https://www.instagram.com/" target="_blanck"><img class="logoRedes" src="../assets/images/instagram.png" alt="logo instagram"></a></li>
-            <li><a href="https://www.facebook.com/?locale=es_LA" target="_blanck"><img class="logoRedes" src="../assets/images/facebook.png" alt="logo facebook"></a></li>
-            <li><a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D" target="_blanck"><img class="logoRedes" src="../assets/images/twitter.png" alt="logo twitter"></a></li>
+            <li><a href="https://www.whatsapp.com/?lang=es_LA" target="_blanck"><img class="logoRedes" src="../assets/images/whatsapp.svg" alt="logo whatsapp"></a></li>
+            <li><a href="https://www.gmail.com/mail/help/intl/es/about.html?iframe" target="_blanck"><img class="logoRedes" src="../assets/images/correo.svg" alt="logo correo electrónico"></a></li>
+            <li><a href="https://www.instagram.com/" target="_blanck"><img class="logoRedes" src="../assets/images/instagram.svg" alt="logo instagram"></a></li>
+            <li><a href="https://www.facebook.com/?locale=es_LA" target="_blanck"><img class="logoRedes" src="../assets/images/facebook.svg" alt="logo facebook"></a></li>
+            <li><a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZXMifQ%3D%3D%22%7D" target="_blanck"><img class="logoRedes" src="../assets/images/twitter.svg" alt="logo twitter"></a></li>
         </ul>
     </aside> 
     </section>
