--- a/pages/suscripciones.html
+++ b/pages/suscripciones.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../assets/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/logoChico.ico" type="image/x-icon">
     <title>Suscripciones | Entre páginas</title>
 </head>
 
@@ -21,7 +21,7 @@
         <!-- barra de navegación y logo del sitio -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html"><img id="logo" src="../assets/images/logo.png" alt="logo del sitio"></a>
+                <a class="navbar-brand" href="../index.html"><img id="logo" src="../assets/images/logo.webp" alt="logo del sitio"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
