--- a/pages/cajas.html
+++ b/pages/cajas.html
@@ -51,7 +51,7 @@
     <!-- sección de descripción de los productos con su respectiva imagen -->
     <section id="descripcionCajas">
         <h2>¿Sabés cuál es tu caja ideal?</h2>
-        <article class="container-fluid">
+        <article class="container">
             <div class="row">
                 <div class="card col-12 col-md-6 col-lg-3">
                     <img src="../assets/images/romance.webp" class="card-img-top" alt="imagen de una caja literaria abierta con libro de romance y regalos varios">
