--- a/pages/suscripciones.html
+++ b/pages/suscripciones.html
@@ -51,7 +51,7 @@
     <!-- sección de descripción de los planes de suscripción -->
     <section class="suscripciones">
         <h2>Elige el plan que mejor se adapte a ti</h2>
-        <article class="container-fluid">
+        <article class="container">
             <div class="row">
                 <div class="card col-12 col-md-6 col-lg-3">
                     <div class="card-body">
