últimos detalles de estilo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="En Entre páginas, cajas literarias, podrás encontrar tus libros favoritos, novedades literarias y los objetos más especiales para acompañar tus lecturas">
     <meta name="keywords"  content="cajas literarias, suscripción literaria, libros, lectores, objetos para lectores">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
@@ -51,10 +52,10 @@
 
     <!-- sección de bienvenida al sitio con imagen y frase -->
     <section id="bienvenida">
-        <h1>¡TE DAMOS LA BIENVENIDA A ENTRE PÁGINAS!</h1>
+        <h1 class="animate__animated animate__bounce">¡TE DAMOS LA BIENVENIDA A ENTRE PÁGINAS!</h1>
             <article class="imagenTexto">
                 <img id="chicaLeyendo" src="./assets/images/chicaLeyendo.webp" alt="imagen de una chica sentada en un sillón leyendo un libro">
-                <p class="frase">"Un lector vive mil vidas antes de morir.<br> El que nunca lee solo vive una"<br> George R. R. Martin</p>
+                <p class="frase">"Un lector vive mil vidas antes de morir.<br> El que nunca lee solo vive una."<br> George R. R. Martin.</p>
             </article>
     </section>
 
@@ -63,24 +64,24 @@
         <h2>¿Cómo funciona nuestro servicio?</h2>
         <main class="pasos">
             <ul class="pasos">
-                <li class="paso1">1. Encuentra tu caja ideal</li>
-                <li class="paso2">2. Pide tu caja por compra única o por suscripción</li>
-                <li class="paso3">3. Recibe el paquete en tu domicilio</li>
-                <li class="paso4">4. Abre tu caja... y ¡disfruta!</li>
+                <li class="paso1">1. Encuentra tu caja ideal.</li>
+                <li class="paso2">2. Pide tu caja por compra única o por suscripción.</li>
+                <li class="paso3">3. Recibe el paquete en tu domicilio.</li>
+                <li class="paso4">4. Abre tu caja... y ¡disfruta!.</li>
             </ul>
         </main>
     </article>
   
     <!-- video de ejemplo de caja literaria -->
     <aside class="unboxing">
-            <h2>Nuestras cajas</h2>
+            <h2>¡Nuestras cajas!</h2>
             <video class="video" src="./assets/videos/videoCaja.webm" autoplay loop controls></video>
     </aside>
     
     <!-- footer -->
     <footer>
-        <a class="top" href="#logo">Ir al comienzo</a>
-        <p class="copy">Copyright Entre páginas - 2023. Todos los derechos reservados</p>
+        <a class="top" href="#logo">Ir al comienzo.</a>
+        <p class="copy">Copyright Entre páginas - 2023. Todos los derechos reservados.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
