--- a/pages/cajas.html
+++ b/pages/cajas.html
@@ -78,7 +78,7 @@
                     <img src="../assets/images/sorpresa.webp" class="card-img-top" alt="imagen de una caja literaria cerrada">
                     <div class="card-body">
                         <h5 class="card-title">Caja sorpresa</h5>
-                        <p class="card-text">Si todas nuestras cajas te gustan y no logras decidirte, ¡no te preocuoes!. Nosotros lo hacemos por ti. Nos tomamos el atrevimiento (con tu permiso, claro) de elegir una de las tres novedades del mes y te la enviamos sin decirte cuál seleccionamos. Esta opción es solo para valientes.</p>
+                        <p class="card-text">Si todas nuestras cajas te gustan y no logras decidirte, ¡no te preocuoes! Nosotros lo hacemos por ti. Elegimos una de las tres novedades del mes y luego te la envíamos sin decirte cuál fue seleccionada. ¡Esta opción es solo para valientes!</p>
                     </div>
                 </div>
             </div>
@@ -87,8 +87,8 @@
 
     <!-- footer -->
     <footer>
-        <a class="top" href="#logo">Ir al comienzo</a>
-        <p class="copy">Copyright Entre páginas - 2023. Todos los derechos reservados</p>
+        <a class="top" href="#logo">Ir al comienzo.</a>
+        <p class="copy">Copyright Entre páginas - 2023. Todos los derechos reservados.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
