--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -52,10 +52,10 @@
     <section class="sobreNosotros">
         <h2>¿Quiénes somos?</h2>
         <article class="infoNosotros">
-            <p>Entre páginas - cajas literarias nació de un grupo de personas apasionadas por la lectura y por todos aquellos objetos relacionados a ella. Creemos que el acto de leer es toda una experiencia en si misma y hay cosas que podemos incorporar para hacer ese momento aún mas mágico. ¿Acaso no se disfruta más de un buen libro cuando tenemos al lado una vela arómatica, una hermosa taza para nuestro café, un marca páginas que nos encante, entre otras cosas?</p>
+            <p>Entre páginas - cajas literarias nació de un grupo de personas apasionadas por la lectura y por todos aquellos objetos relacionados a ella. Creemos que el acto de leer es toda una experiencia en si misma y que hay cosas que podemos incorporar para hacer ese momento aún mas mágico. ¿Acaso no se disfruta más de un buen libro cuando tenemos al lado una vela arómatica, una hermosa taza para nuestro café, un marca páginas que nos encante, entre otras cosas?</p>
             <p>Es por esto que decidimos crear estas cajas. Están pensadas con la intención que nos brinden todo lo necesario para acompañar nuestros momentos de lectura.</p>
             <p>Esperamos que disfrutes de nuestro trabajo y notes el cariño que ponemos al crear cada caja. ¡Muchas gracias por eleginos! 💗</p>
-            <p>Equipo Entre páginas</p>
+            <p>Equipo Entre páginas.</p>
         </article>
         <aside class="libroNosotros">
             <img src="../assets/images/libroFlores.webp" alt="imagen de un libro abierto con flores y mariposas saliendo de las páginas">
@@ -65,8 +65,8 @@
 
     <!-- footer -->
     <footer>
-        <a class="top" href="#logo">Ir al comienzo</a>
-        <p class="copy">Copyright Entre páginas - 2023. Todos los derechos reservados</p>
+        <a class="top" href="#logo">Ir al comienzo.</a>
+        <p class="copy">Copyright Entre páginas - 2023. Todos los derechos reservados.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
