--- a/pages/suscripciones.html
+++ b/pages/suscripciones.html
@@ -58,10 +58,10 @@
                         <h5 class="card-title">Compra única</h5>
                         <div class="descripcionSuscripciones">
                             <p class="card-text">
-                                Un libro (temática a elección) <br>
-                                Regalos relacionados al libro y/o lectura <br>
-                                Playlist de Spotify <br>
-                                Pago único + envío <br>
+                                Un libro (temática a elección). <br>
+                                Regalos relacionados al libro y/o lectura. <br>
+                                Playlist de Spotify. <br>
+                                Pago único + envío. <br>
                             </p>
                             <p class="precio">$9800</p>
                         </div>
@@ -73,10 +73,10 @@
                         <h5 class="card-title">Suscripción trimestral</h5>
                         <div class="descripcionSuscripciones">
                             <p class="card-text">
-                                Un libro cada tres meses (temática a elección) <br>
-                                Regalos relacionados al libro y/o lectura <br>
-                                Playlist de Spotify <br>
-                                Pago trimestral + envío <br>
+                                Un libro cada tres meses (temática a elección). <br>
+                                Regalos relacionados al libro y/o lectura. <br>
+                                Playlist de Spotify. <br>
+                                Pago trimestral + envío. <br>
                             </p>
                             <p class="precio">$8700</p>
                         </div>
@@ -88,10 +88,10 @@
                         <h5 class="card-title">Suscripción bimestral</h5>
                         <div class="descripcionSuscripciones">
                             <p class="card-text">
-                                Un libro cada dos meses (temática a elección) <br>
-                                Regalos relacionados al libro y/o lectura <br>
-                                Playlist de Spotify <br>
-                                Pago bimestral + envío <br>
+                                Un libro cada dos meses (temática a elección). <br>
+                                Regalos relacionados al libro y/o lectura. <br>
+                                Playlist de Spotify. <br>
+                                Pago bimestral + envío. <br>
                             </p>
                             <p class="precio">$7800</p>
                         </div>
@@ -103,10 +103,10 @@
                         <h5 class="card-title">Suscripción mensual</h5>
                         <div class="descripcionSuscripciones">
                             <p class="card-text">
-                                Un libro al mes (temática a elección) <br>
-                                Regalos relacionados al libro y/o lectura <br>
-                                Playlist de Spotify <br>
-                                Pago mensual + envío <br>
+                                Un libro al mes (temática a elección). <br>
+                                Regalos relacionados al libro y/o lectura. <br>
+                                Playlist de Spotify. <br>
+                                Pago mensual + envío. <br>
                             </p>
                             <p class="precio">$6700</p>
                         </div>
@@ -119,8 +119,8 @@
     
     <!-- footer -->
     <footer>
-        <a class="top" href="#logo">Ir al comienzo</a>
-        <p class="copy">Copyright Entre páginas - 2023. Todos los derechos reservados</p>
+        <a class="top" href="#logo">Ir al comienzo.</a>
+        <p class="copy">Copyright Entre páginas - 2023. Todos los derechos reservados.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
