--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -73,7 +73,7 @@
 
     <!-- links a redes sociales y otras formas de contacto -->
     <aside id="metodosContacto">
-        <h3>También podes encontrarnos en</h3>
+        <h3>También podés encontrarnos en:</h3>
         <ul class="redes">
             <li><a href="https://www.whatsapp.com/?lang=es_LA" target="_blanck"><img class="logoRedes" src="../assets/images/whatsapp.svg" alt="logo whatsapp"></a></li>
             <li><a href="https://www.gmail.com/mail/help/intl/es/about.html?iframe" target="_blanck"><img class="logoRedes" src="../assets/images/correo.svg" alt="logo correo electrónico"></a></li>
@@ -85,8 +85,8 @@
     </section>
     <!-- footer -->
     <footer>
-        <a class="top" href="#logo">Ir al comienzo</a>
-        <p class="copy">Copyright Entre páginas - 2023. Todos los derechos reservados</p>
+        <a class="top" href="#logo">Ir al comienzo.</a>
+        <p class="copy">Copyright Entre páginas - 2023. Todos los derechos reservados.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
